2000-08-18  Jeff Hobbs  <hobbs@scriptics.com>

	* generic/tkTable.c: changed the -ipad* defaults to 0, to go along
	with the -pad* defaults.  For users looking for backwards
	compatability with 2.5 padding, add:
	    option add *Table.ipadX 2
	    option add *Table.ipadY 1
	Users will likely find that -pad* is more intuitive though.
		**** POTENTIAL INCOMPATABILITY ****

	* doc/tkTable.html:
	* doc/tkTable.n: updated docs to reflect new -(i)pad* definitions
	and enhanced -bd behavior.

	* generic/tkTable.c (TableCursorEvent, TableConfigCursor): reduced
	unnecessary redraws when the cursor was in a non-editable cell.

2000-08-17  Jeff Hobbs  <hobbs@scriptics.com>

	* generic/tkTable.c: enhanced -borderwidth option to support
	per-edge configuration of borderwith.  -bd now takes a list of
	pixel sizes, 1, 2 or 4 in length.  1 is traditional, 2 specifies
	just the left and right border sizes (to emulate a multicolumn
	listbox), and 4 specifies {left right top bottom} for ultimate
	control.  Tags may override the default.
	Also redid the handling of -(i)pad[xy].  Swapped the basic meaning
	(-pad* from v2.5 should now be -ipad* in 2.7).  -pad* now enforces
	absolute empty padding for cells, expanding the default size.
	Embedded windows can override the -pad* value.  See docs for more.
		**** POTENTIAL INCOMPATABILITY ****

	* generic/tkTable.h: removed use of INLINE, added new border style
	support to structures.

	* generic/tkTableCell.c (TableAtBorder): made it aware of the new
	configurable border style.  It bases its calculations off the
	default border width(s).  Also did lots of comment cleanup.

	* generic/tkTableWin.c (EmbWinDisplay): changed interpretation of
	-pad* for windows to be per side (instead of overall).  This is
	more intuitive.  Added support of new border styles.

	* generic/tkTableTag.c: Added new border style control per tag.
	New TableGetTagBorders function to determine border values based
	on input.  Lots of comment/code cleanup.
