@@ -1,3 +1,8 @@
+2000-08-21  Jeff Hobbs  <hobbs@scriptics.com>
+
+	* generic/tkTable.c (TableConfigure): added check for NULL
+	oldBorders during configure.
+
 2000-08-18  Jeff Hobbs  <hobbs@scriptics.com>
 
 	* generic/tkTable.c: changed the -ipad* defaults to 0, to go along
